- Both A4 and US letter versions of the PDF user's guide are now
  available

+ Bug Fixes

- Fixed minor word warp bug with very long lines
- The setting of the 'Reverse Search' flag was not saved
- Fixed typo in welcome message displayed when jEdit run for the first
  time

+ API Changes

- BufferUpdate.getView() method added. This may return null.

* Version 3.1pre5

+ New Features

- Reverse search (Tom Locke)
  - 'Reverse search' check box in Find dialog box controls direction of
    find when 'Find' is clicked.
  - 'Find Next' and 'Find Previous' commands always search in the
    respective direction.
  - Only literal reverse search currently supported.
  - Search bar uses reverse search when Backspace pressed during
    incremental search.
  - Enter in search bar searches forward, Shift+Enter searches backwards
  - Keyboard shortcuts:
    'Find Previous' is bound to C+h
    'Find Selection', formely bound to C+h, is now bound to C+e C+f
- Ada95 syntax highlighting (Alwyn Barry)
- BCEL Java disassembler syntax highlighting, primarily intended for
  use in Andre's upcoming ByteCode plugin (Andre Kaplan)
- Help viewer now displays tree of available documentation, including
  all sections of the user's guide, for one-click access

+ Enhancements

- Virtual file systems in the 'More' menu are now sorted
- New class: MiscUtilities.MenuItemCompare
- Updated to gnu.regexp 1.1.2
- New EditPlugin.getJAR() method

+ Neutral

- EditBuddy plugin moved into the core

+ Bug Fixes

- Fixed possible NPE when splitting view
- Removed duplicate 'Return from Find' macro
- ^ and $ didn't work in regexps because of a change in gnu.regexp 1.1.1
- Register commands were not properly recorded in macros
- Startup macro would not run if it was one of the files opened at startup
- Entering a URL in the file system browser's file name field should now
  work
- Fixed several minor bugs regarding resizing docking areas